Implement integration work with alibaba sentinel framwork, users can define degrade & flow control strategy at node level in the graph file